--- a/index.html
+++ b/index.html
@@ -2,8 +2,167 @@
 <html lang="ru">
 <head>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="index.css">
     <title>Задача «Про котиков»</title>
 </head>
 <body>
+<input type="checkbox" class="view" id="view">
+<header>
+    <label for="view" class="hamburger">☰</label>
+</header>
+<main>
+    <article class="cat_info">
+        <img src="images/1.jpg" alt="Разметка">
+        <h3 class="name">Разметка</h3>
+        <section class="short">
+            Возраст: 4 года<br>
+            Порода: Фронт<br>
+            Болезни: дедлайн<br>
+        </section>
+        <section class="long">
+            Язы́к разме́тки (текста) в компьютерной терминологии — набор символов или последовательностей,
+            вставляемых в текст для передачи информации о его выводе или строении.
+            Принадлежит классу компьютерных языков. Текстовый документ,
+            написанный с использованием языка разметки,
+            содержит не только сам текст (как последовательность слов и знаков препинания),
+            но и дополнительную информацию о различных его участках — например,
+            указание на заголовки, выделения,
+            списки и т. д.
+            В более сложных случаях язык разметки позволяет вставлять в документ интерактивные элементы и
+            содержание других документов.
+        </section>
+    </article>
+    <article class="cat_info">
+        <img src="images/2.jpg" alt="Джеэс">
+        <h3 class="name">Джеэс</h3>
+        <section class="short">
+            Возраст: 4 года<br>
+            Порода: Фронт<br>
+            Болезни: дедлайн<br>
+        </section>
+        <section class="long">
+            JavaScript обычно используется как встраиваемый
+            язык для программного доступа к объектам приложений.
+            Наиболее широкое применение находит в браузерах как язык сценариев для
+            придания интерактивности веб-страницам.
+            Основные архитектурные черты: динамическая типизация,
+            слабая типизация, автоматическое управление памятью,
+            прототипное программирование, функции как объекты первого класса.
+        </section>
+    </article>
+    <article class="cat_info">
+        <img src="images/3.jpg" alt="Зед">
+        <h3 class="name">Зед</h3>
+        <section class="short">
+            Возраст: 5 лет<br>
+            Порода: Универский<br>
+            Болезни: при смерти<br>
+        </section>
+        <section class="long">
+            Предмет страдания студентов
+        </section>
+    </article>
+    <article class="cat_info">
+        <img src="images/4.jpg" alt="Дискретка">
+        <h3 class="name">Дискретка</h3>
+        <section class="short">
+            Возраст: 2 года<br>
+            Порода: ШАД<br>
+            Болезни: датасатанизм<br>
+        </section>
+        <section class="long">
+            В контексте математики в целом дискретная математика часто отождествляется с
+            конечной математикой — направлением,
+            изучающим конечные структуры — конечные графы, конечные группы, конечные автоматы.
+        </section>
+    </article>
+    <article class="cat_info">
+        <img src="images/5.jpg" alt="Си">
+        <h3 class="name">Си</h3>
+        <section class="short">
+            Возраст: 1 год<br>
+            Порода: ШАД<br>
+            Болезни: диабет<br>
+        </section>
+        <section class="long">
+            Компилируемый статически типизированный язык программирования общего назначения,
+            разработанный в 1969—1973 годах сотрудником Bell Labs Деннисом Ритчи как развитие языка Би.
+            Первоначально был разработан для реализации операционной системы UNIX,
+            но впоследствии был перенесён на множество других платформ.
+            Согласно дизайну языка, его конструкции близко сопоставляются типичным машинным инструкциям,
+            благодаря чему он нашёл применение в проектах, для которых был свойственен язык ассемблера,
+            в том числе как в операционных системах, так и в различном прикладном программном обеспечении
+            для множества устройств — от суперкомпьютеров до встраиваемых систем
+        </section>
+    </article>
+    <article class="cat_info">
+        <img src="images/6.jpg" alt="Алгосы">
+        <h3 class="name">Алгосы</h3>
+        <section class="short">
+            Возраст: 2 года<br>
+            Порода: Бородинские<br>
+            Болезни: асм<br>
+        </section>
+        <section class="long">
+            Набор инструкций, описывающих порядок действий исполнителя для достижения некоторого результата.
+            В старой трактовке вместо слова «порядок» использовалось слово «последовательность»,
+            но по мере развития параллельности в работе компьютеров
+            слово «последовательность» стали заменять более
+            общим словом «порядок». Независимые инструкции могут
+            выполняться в произвольном порядке, параллельно,
+            если это позволяют используемые исполнители.
+        </section>
+    </article>
+    <article class="cat_info">
+        <img src="images/7.jpg" alt="Тервер">
+        <h3 class="name">Тервер</h3>
+        <section class="short">
+            Возраст: 1 год<br>
+            Порода: Матема<br>
+            Болезни: нет<br>
+        </section>
+        <section class="long">
+            Тео́рия вероя́тностей — раздел математики, изучающий случайные события,
+            случайные величины, их свойства и операции над ними.
+        </section>
+    </article>
+    <article class="cat_info">
+        <img src="images/8.jpg" alt="Клауд">
+        <h3 class="name">Клауд</h3>
+        <section class="short">
+            Возраст: меньше месяца<br>
+            Порода: Бэк<br>
+            Болезни: спидорак<br>
+        </section>
+        <section class="long">
+            Вычислительные мощности Яндекса и сервисы для обработки и хранения данных.
+            Яндекс.Облако — публичная облачная платформа, где вы можете создавать и развивать свои проекты.
+        </section>
+    </article>
+    <article class="cat_info">
+        <img src="images/9.jpg" alt="Трип">
+        <h3 class="name">Трип</h3>
+        <section class="short">
+            Возраст: бессмертный<br>
+            Порода: Тусовочный<br>
+            Болезни: похмелье<br>
+        </section>
+        <section class="long">
+            ДММ ДПММ ЗМШ BADBAR
+        </section>
+    </article>
+    <article class="cat_info">
+        <img src="images/10.jpg" alt="Янессал">
+        <h3 class="name">Янессал</h3>
+        <section class="short">
+            Возраст: 21 год<br>
+            Порода: Кот<br>
+            Болезни: честность<br>
+        </section>
+        <section class="long">
+            Он нассал
+        </section>
+    </article>
+</main>
 </body>
 </html>
