--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <main>
     <article class="cat_info">
         <img src="images/1.jpg" alt="Разметка">
-        <h3 class="name">Разметка</h3>
+        <div class="name">Разметка</div>
         <section class="short">
             Возраст: 4 года<br>
             Порода: Фронт<br>
@@ -34,7 +34,7 @@
     </article>
     <article class="cat_info">
         <img src="images/2.jpg" alt="Джеэс">
-        <h3 class="name">Джеэс</h3>
+        <div class="name">Джеэс</div>
         <section class="short">
             Возраст: 4 года<br>
             Порода: Фронт<br>
@@ -52,7 +52,7 @@
     </article>
     <article class="cat_info">
         <img src="images/3.jpg" alt="Зед">
-        <h3 class="name">Зед</h3>
+        <div class="name">Зед</div>
         <section class="short">
             Возраст: 5 лет<br>
             Порода: Универский<br>
@@ -64,7 +64,7 @@
     </article>
     <article class="cat_info">
         <img src="images/4.jpg" alt="Дискретка">
-        <h3 class="name">Дискретка</h3>
+        <div class="name">Дискретка</div>
         <section class="short">
             Возраст: 2 года<br>
             Порода: ШАД<br>
@@ -78,7 +78,7 @@
     </article>
     <article class="cat_info">
         <img src="images/5.jpg" alt="Си">
-        <h3 class="name">Си</h3>
+        <div class="name">Си</div>
         <section class="short">
             Возраст: 1 год<br>
             Порода: ШАД<br>
@@ -97,7 +97,7 @@
     </article>
     <article class="cat_info">
         <img src="images/6.jpg" alt="Алгосы">
-        <h3 class="name">Алгосы</h3>
+        <div class="name">Алгосы</div>
         <section class="short">
             Возраст: 2 года<br>
             Порода: Бородинские<br>
@@ -115,7 +115,7 @@
     </article>
     <article class="cat_info">
         <img src="images/7.jpg" alt="Тервер">
-        <h3 class="name">Тервер</h3>
+        <div class="name">Тервер</div>
         <section class="short">
             Возраст: 1 год<br>
             Порода: Матема<br>
@@ -128,7 +128,7 @@
     </article>
     <article class="cat_info">
         <img src="images/8.jpg" alt="Клауд">
-        <h3 class="name">Клауд</h3>
+        <div class="name">Клауд</div>
         <section class="short">
             Возраст: меньше месяца<br>
             Порода: Бэк<br>
@@ -141,7 +141,7 @@
     </article>
     <article class="cat_info">
         <img src="images/9.jpg" alt="Трип">
-        <h3 class="name">Трип</h3>
+        <div class="name">Трип</div>
         <section class="short">
             Возраст: бессмертный<br>
             Порода: Тусовочный<br>
@@ -153,7 +153,7 @@
     </article>
     <article class="cat_info">
         <img src="images/10.jpg" alt="Янессал">
-        <h3 class="name">Янессал</h3>
+        <div class="name">Янессал</div>
         <section class="short">
             Возраст: 21 год<br>
             Порода: Кот<br>
